// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/card/card should match snapshot 1`] = `
<Card
  expanded={false}
>
  <div
    className="Card"
  >
    <CardHeader
      expanded={false}
      key=".0"
    >
      <div
        className="Card__header"
      >
        Header Test
      </div>
    </CardHeader>
    <CardBody
      expanded={false}
      key=".1"
    >
      <div
        className="Card__body expanding"
        onTransitionEnd={[Function]}
        style={
          Object {
            "height": "",
          }
        }
      >
        Body Test
      </div>
    </CardBody>
  </div>
</Card>
`;

exports[`components/card/card should match snapshot when expanded 1`] = `
<Card
  expanded={true}
>
  <div
    className="Card expanded"
  >
    <CardHeader
      expanded={true}
      key=".0"
    >
      <div
        className="Card__header expanded"
      >
        Header Test
        <hr
          className="Card__hr"
        />
      </div>
    </CardHeader>
    <CardBody
      expanded={true}
      key=".1"
    >
      <div
        className="Card__body expanded expanding"
        onTransitionEnd={[Function]}
        style={
          Object {
            "height": 0,
          }
        }
      >
        Body Test
      </div>
    </CardBody>
  </div>
</Card>
`;

exports[`components/card/card should match snapshot when using header content and a button 1`] = `
<div
  className="Card console expanded"
>
  <CardHeader
    expanded={true}
    key=".0"
  >
    <TitleAndButtonCardHeader
      body={
        <div>
          Hello!
        </div>
      }
      buttonText={
        <Memo(MemoizedFormattedMessage)
          defaultMessage="Add policy"
          id="admin.data_retention.customPolicies.addPolicy"
        />
      }
      onClick={[Function]}
      subtitle={
        <Memo(MemoizedFormattedMessage)
          defaultMessage="Customize how long specific teams and channels will keep messages."
          id="admin.data_retention.customPolicies.subTitle"
        />
      }
      title={
        <Memo(MemoizedFormattedMessage)
          defaultMessage="Custom retention policies"
          id="admin.data_retention.customPolicies.title"
        />
      }
    />
  </CardHeader>
  <CardBody
    expanded={true}
    key=".1"
  >
    Body Test
  </CardBody>
</div>
`;

exports[`components/card/card should match snapshot when using header content and no button 1`] = `
<div
  className="Card console expanded"
>
  <CardHeader
    expanded={true}
    key=".0"
  >
    <TitleAndButtonCardHeader
      body={
        <div>
          Hello!
        </div>
      }
      subtitle={
        <Memo(MemoizedFormattedMessage)
          defaultMessage="Customize how long specific teams and channels will keep messages."
          id="admin.data_retention.customPolicies.subTitle"
        />
      }
      title={
        <Memo(MemoizedFormattedMessage)
          defaultMessage="Custom retention policies"
          id="admin.data_retention.customPolicies.title"
        />
      }
    />
  </CardHeader>
  <CardBody
    expanded={true}
    key=".1"
  >
    Body Test
  </CardBody>
</div>
`;
